[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "ecc-tools"
version = "0.1.0-alpha.4"
requires-python = ">=3.11"
dependencies = [
    "numpy",
]

[tool.scikit-build]
cmake.define.BUILD_ECOS = 1
build.verbose = true
editable.rebuild = true
build-dir = "build"

[dependency-groups]
dev = [
    "auditwheel",
    "scikit-build-core",
]
